--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "mysql": "^2.18.1",
+    "node-sass": "^7.0.3",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
